--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -102,6 +102,82 @@ border-radius: 50%;
 background-color: #A8ACB0;
 }
 
+.breadcrumb__list span {
+  font-weight: 400;
+  font-size: 16px;
+  position: relative;
+}
+
+.breadcrumb__list span:not(:last-child) {
+  padding-right: 12px;
+  margin-right: 5px;
+}
+.coupon-border::before {
+  bottom: auto;
+  top: -13px;
+  transform: translateX(50%) scale(1, -1);
+}
+
+.coupon-border::before {
+  position: absolute;
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-color: #fff;
+  bottom: -13px;
+  right: 50%;
+  z-index: 1;
+  border: 1px solid rgb(var(--color-gray-200) / 1);
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom: 0;
+  clip-path: polygon(0 0, 100% 0%, 100% 50%, 0 50%);
+}
+
+
+.coupon-border::after {
+  position: absolute;
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-color: #fff;
+  bottom: -13px;
+  right: 50%;
+  z-index: 1;
+  border: 1px solid rgb(var(--color-gray-200) / 1);
+  transform: translateX(50%);
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom: 0;
+  clip-path: polygon(0 0, 100% 0%, 100% 50%, 0 50%);
+}
+
+.coupon-countdown{
+  flex: 0 0 32%;
+  & ul li:not(:last-child)::after {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1px;
+    height: 17px;
+    content: "";
+    background-color: #ebebeb;
+  }
+}
+
+
+.breadcrumb__list span:not(:last-child)::after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 50%;
+  width: 4px;
+  height: 4px;
+  background-color: #A8ACB0;
+  border-radius: 50%;
+}
+
 .login-mail::after {
   position: absolute;
   content: "";
